[package]
name = "bevy_ninepatch_playground"
version = "0.1.0"
authors = ["Jasen Borisov <jamadazi@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 1
incremental = false

[dependencies]
bevy_ninepatch = "0.1.3"

[dependencies.bevy]
features = [ "wayland" ]
version = "0.2.1"

[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy.git" }
bevy_ninepatch = { git = "https://github.com/mockersf/bevy_extra.git" }
